# clamav-gui

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES  CMakeLists.txt  README.md  clamav-gui.pro  cpack.cmake  default.nix  flake.nix  install.cmake  resources.qrc
.github/workflows/: cmake-single-platform.yml
extra/: ClamAV-GUI-ServiceMenu.desktop  ClamAV-GUI.desktop  clamav-gui-servicemenu.desktop  clamav-gui.desktop  countryfullnames.txt
icons/: setuptab.cpp
src/: cfilesystemmodel.h  clamav_gui.cpp  clamdconfcomboboxoption.cpp  clamdconfspinboxoption.cpp  clamdconfstringoption.cpp  clamdmanager.cpp  freshclamsetter.cpp  highlighter.cpp  includeexcludeoptions.h  infodialog.cpp  logviewerobject.cpp  logviewerobject.h  logviewobject.cpp  optionsdialog.cpp  optionsdialog.h  partiallogobject.cpp  profilemanager.cpp  profilemanager.h  profilewizarddialog.cpp  scanoption.cpp  scanoptionyn.cpp  scheduler.cpp  schedulescanobject.cpp  setuptab.cpp  setuptab.h  translator.cpp  translator.h
translations/: clamav-da_DK.ts  clamav-de_DE.ts  clamav-en_GB.ts  clamav-es_ES.ts  clamav-fr_FR.ts  clamav-gui-da_DK.ts  clamav-gui-de_DE.ts  clamav-gui-en_GB.ts  clamav-gui-es_ES.ts  clamav-gui-fr_FR.ts  clamav-gui-it_IT.ts  clamav-gui-pt_PT.ts  clamav-gui-uk_UA.ts  clamav-gui-zh_CN.ts  clamav-it_IT.ts  clamav-pt_PT.ts  clamav-uk_UA.ts  clamav-zh_CN.ts
ui/: infodialog.ui  optionsdialog.ui  setuptab.ui
